First version wid animation

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="home">
         <div class="hero">
             <h1 data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-in-out">Experience the real taste of food with us</h1>
-            <p data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-in-out">Food made with real organic spices and pure love</p>
+            <p data-aos="fade-up" data-aos-duration="1500" data-aos-easing="ease-in-out">Food made with real organic spices and authentic food</p>
             <a href="#food"><button class="btn" data-aos="flip-up" data-aos-duration="2000" data-aos-easing="ease-in-out" data-aos-delay="1000">View Menu</button></a>
         </div>
     </section>
@@ -66,19 +66,19 @@
     <section id="about">
         <h1 style="text-align:center;font-size:40px;letter-spacing:1.5px" data-aos="slide-up" data-aos-duration="1000" data-aos-easing="ease-in-out">Why US?</h1>
         <div class="yus-parent">
-            <div class="yus-card">
+            <div class="yus-card" data-aos="zoom-in" data-aos-duration="2000" data-aos-easing="ease-in-out">
                 <img src="./Images/icons8-organic-food-50.png" >
                 <h3>Quality Food</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni distinctio sunt placeat architecto iure iusto?</p>
             </div>
 
-            <div class="yus-card">
+            <div class="yus-card" data-aos="zoom-in" data-aos-duration="2000" data-aos-easing="ease-in-out">
                 <img src="./Images/icons8-vegan-food-50.png" >
                 <h3>Original Receipes</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni distinctio sunt placeat architecto iure iusto?</p>
             </div>
 
-            <div class="yus-card">
+            <div class="yus-card" data-aos="zoom-in" data-aos-duration="2000" data-aos-easing="ease-in-out">
                 <img src="./Images/icons8-delivery-50.png" >
                 <h3>Fastest Delivery</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni distinctio sunt placeat architecto iure iusto?</p>
